--- a/TodoList/Base.lproj/Main.storyboard
+++ b/TodoList/Base.lproj/Main.storyboard
@@ -64,7 +64,7 @@
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.94509803921568625" green="0.81960784313725488" blue="0.81960784313725488" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
-                                            <outlet property="todoTaskName" destination="Z8a-SM-2k8" id="mKs-04-CSh"/>
+                                            <outlet property="todoTaskName" destination="Z8a-SM-2k8" id="hIy-Ko-xwm"/>
                                             <outlet property="todoTaskStatus" destination="4ND-e6-Efy" id="GWj-oF-Zm4"/>
                                             <outlet property="todoTaskSwitchButton" destination="zzu-MT-tVE" id="TtE-XW-Q8E"/>
                                         </connections>
